# GPTCast

./: .gitignore  LICENSE  README.md  create_environment.sh  install_python_ubuntu.sh  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: miarad.yaml
configs/experiment/: gptcast_16x16.yaml  gptcast_8x8.yaml  vaeganvq_mae.yaml  vaeganvq_mwae.yaml
configs/logger/: many_loggers.yaml
configs/model/: gptcast.yaml  vaeganvq.yaml
configs/trainer/: ddp.yaml  default.yaml
data/: download_data.py
gptcast/: train.py
gptcast/data/: __init__.py  miarad.py  miarad_datamodule.py
gptcast/models/: __init__.py  gptcast.py  vaegan.py
gptcast/models/components/: __init__.py
gptcast/models/components/transformer/: __init__.py  mingpt.py
gptcast/models/components/vaegan/: __init__.py  encoder_decoder.py  quantize.py
gptcast/models/components/vaegan/losses/: __init__.py  discriminator.py  lpips.py
gptcast/utils/: converters.py  downloads.py  instantiators.py  logging_utils.py  plotting.py  rich_utils.py  utils.py
models/: download_pretrained_models.py
notebooks/: example_autoencoder_reconstruction.ipynb  example_gptcast_forecast.ipynb  verification_crps_compute.ipynb  verification_crps_plot.ipynb  verification_rank_hist_compute.ipynb  verification_rank_hist_plot.ipynb  verification_vae_performance_compute.ipynb  verification_vae_performance_plot.ipynb
