[tool.poetry]
name = "gptcast"
version = "1.0"
description = "a weather language model for precipitation nowcasting"
authors = ["Gabriele Franch <franch@fbk.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
torch = "^2.3.1"
lightning = "^2.3.3"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
pandas = "^2.2.2"
netcdf4 = "^1.7.1.post2"
einops = "^0.8.0"
albumentations = "^1.4.14"
torchvision = "^0.19.0"
pyrootutils = "^1.0.4"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
torchinfo = "^1.8.0"
matplotlib = "^3.9.2"
pysteps = "^1.10.0"
cartopy = "^0.23.0"
rich = "^13.7.1"
fire = "^0.6.0"
tensorboard = "^2.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
